k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adaptivq
  labels:
    name: adaptivq
    environment: production
